--- a/src/App.css
+++ b/src/App.css
@@ -255,3 +255,11 @@ tbody{
 .center-table{
   text-align: center !important;
 }
+.fillLoading{
+  margin-top: -300px;
+  height: 150%;
+  width: 100%;
+  position: fixed;
+  background:rgba(255, 255, 255, 0.9);
+  z-index: 2;
+}
